@@ -6,6 +6,7 @@ Version 1.3.dev1
   * spell check support
   * fix window cache settings
   * fix SIGSEGV - gui threads conflict
+  * min size of editor and preview when both widgets are visible
 
 Version 1.2.0 - 26.10.2017 19:40
 
